--- a/index.html
+++ b/index.html
@@ -11,26 +11,72 @@
   <body>
     <div class="container">
       <h1>Epicodus Pizza</h1><br>
-    </div>
-    <div id="size">
-     <div class="radio">
-      <label>
-        <input type="radio" name="flavor" value="chocolate" checked>
-        Chocolate
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="flavor" value="vanilla">
-        Vanilla
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="flavor" value="cookiesandcream">
-        Cookies & Cream
-      </label>
-    </div>
+      <div id="crust">
+        <p>Select Crust:</p>
+        <div class="radio">
+          <label>
+            <input type="radio" name="crust" value="thin-crust" checked>
+            Crunchy Thin Crust 
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="crust" value="hand-tossed">
+            Hand Tossed
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="crust" value="gluten-free">
+            Gluten Free Crust
+          </label>
+        </div>
+      </div>
+      <div id="size">
+        <p>Select Pizza Size:</p>
+        <div class="radio">
+          <label>
+            <input type="radio" name="size" value="small" checked>
+            Small
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="size" value="medium">
+            Medium
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="size" value="large">
+            Large
+          </label>
+        </div>
+      </div>
+      <div id = "toppings">
+        <div class="form-group">
+          <p>Meat Toppings:</p>
+          <input type="checkbox" name="meat-toppings" value="chicken"> Premium Chicken.<br>
+          <input type="checkbox" name="meat-toppings" value="pepperoni">Pepperoni<br>
+          <input type="checkbox" name="meat-toppings" value="italian-sausage">Italian Sausage<br>
+        </div>
+        <div class="form-group">
+          <p>Non-Meat Toppings:</p>
+          <input type="checkbox" name="toppings" value="hot-sauce">Hot Sauce<br>
+          <input type="checkbox" name="toppings" value="garlic"> Garlic<br>
+          <input type="checkbox" name="toppings" value="jalapeno-peppers">jalapeno-peppers<br>
+          <input type="checkbox" name="toppings" value="onions">Onions<br>
+          <input type="checkbox" name="toppings" value="banana-peppers">Banana Peppers<br>
+          <input type="checkbox" name="toppings" value="cheddar-cheese">Cheddar Cheese<br>
+        </div>
+       <button type="submit" "btn btn-primary">Submit </button>
+       <div id="receipt">
+        <h3>Receipt</h3>
+        <p id="crust">Crust:</p>
+        <p id="size">Size:</p>
+        <p id="mt">Meat Toppings:</p>
+        <p id="top">Meat Toppings:</p>
+      </div>  
     </div>
   </body>
 </html>      
