added constructor,pizza object in js

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           </label>
         </div>
       </div>
+      <!-- <div class="row"> -->
       <div id = "toppings">
         <div class="form-group">
           <p>Meat Toppings:</p>
@@ -69,13 +70,20 @@
           <input type="checkbox" name="toppings" value="banana-peppers">Banana Peppers<br>
           <input type="checkbox" name="toppings" value="cheddar-cheese">Cheddar Cheese<br>
         </div>
-       <button type="submit" "btn btn-primary">Submit </button>
-       <div id="receipt">
+      </div>  
+      <button type="submit" "btn btn-primary" id="button" >Submit </button>
+      <div id="receipt">
         <h3>Receipt</h3>
-        <p id="crust">Crust:</p>
-        <p id="size">Size:</p>
-        <p id="mt">Meat Toppings:</p>
-        <p id="top">Meat Toppings:</p>
+        <p>Crust:</p>
+        <p id="crustop"> </p>
+        <p>Size:</p>
+        <p id="sizeop"> </p>
+        <p>Meat Toppings:</p>
+        <p id="mt"> </p>
+        <p>Meat Toppings:</p>
+        <p id="top"> </p>
+        <p>Price:</p>
+        <p id="price"></p>
       </div>  
     </div>
   </body>
