added price prototype in scripts.js

--- a/index.html
+++ b/index.html
@@ -81,22 +81,11 @@
         <p id="mt"> </p>
         <p>Toppings:</p>
         <p id="top"> </p>
+        <p>Price: $ </p>
+        <p id="price"> </p>
         <div id="buttons"> </div>
         <div id="buttondel"> </div>
       </div>  
-      <div id="receipt">
-        <h3></h3>
-        <p>Crust:</p>
-        <p id="crustop"> </p>
-        <p>Size:</p>
-        <p id="sizeop"> </p>
-        <p>Meat Toppings:</p>
-        <p id="mt"> </p>
-        <p>Toppings:</p>
-        <p id="top"> </p>
-        <p>Price:</p>
-        <p id="price"></p>
-      </div>
     </div>
   </body>
 </html>      
