added some styles in styles.css file

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=K2D|Libre+Baskerville" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
-      <h1>Epicodus Pizza</h1><br>
+    <h1>Manasa's Pizza</h1><br>
+    <div class="container">  
       <div id="crust">
         <p>Select Crust:</p>
         <div class="radio">
@@ -71,21 +71,18 @@
         </div>
       </div>  
       <button type="submit" "btn btn-primary" id="button" >Add To Cart </button>
+    </div><br><br>
+    <div id="cob">
       <div id="checkout">
-        <h3></h3>
-        <p>Crust:</p>
-        <p id="crustop"> </p>
-        <p>Size:</p>
-        <p id="sizeop"> </p>
-        <p>Meat Toppings:</p>
-        <p id="mt"> </p>
-        <p>Toppings:</p>
-        <p id="top"> </p>
-        <p>Price: $ </p>
-        <p id="price"> </p>
-        <div id="buttons"> </div>
+        <h3>Your Order Details:</h3><br>
+        <h3>Crust: <span id="crustop"></span></h3><br>
+        <h3>Size: <span id="sizeop"></span></h3><br>
+        <h3 id="mt1">Meat Toppings: <span id="mt"></span></h3><br>
+        <h3 id="top1">Toppings: <span id="top"></span></h3><br>
+        <h3>Price: $ <span id="price"></span></h3><br>
+        <div id="buttons"> </div><br>
         <div id="buttondel"> </div>
-      </div>  
-    </div>
+      </div>
+    </div>  
   </body>
 </html>      
