added styles and background image in css

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       </div>
       <div id = "toppings">
         <div class="form-group">
-          <p>Meat Toppings:</p>
+          <p>Check any Meat Toppings:</p>
           <input type="checkbox" name="meat-toppings" value="chicken"> Premium Chicken.<br>
           <input type="checkbox" name="meat-toppings" value="pepperoni">Pepperoni<br>
           <input type="checkbox" name="meat-toppings" value="italian-sausage">Italian Sausage<br>
         </div>
         <div class="form-group">
-          <p>Non-Meat Toppings:</p>
+          <p>Check any Veggie Toppings:</p>
           <input type="checkbox" name="toppings" value="hot-sauce">Hot Sauce<br>
           <input type="checkbox" name="toppings" value="garlic"> Garlic<br>
           <input type="checkbox" name="toppings" value="jalapeno-peppers">jalapeno-peppers<br>
@@ -74,7 +74,7 @@
     </div><br><br>
     <div id="cob">
       <div id="checkout">
-        <h3>Your Order Details:</h3><br>
+        <h3 id ="order">Your Order Details:</h3><br>
         <h3>Crust: <span id="crustop"></span></h3><br>
         <h3>Size: <span id="sizeop"></span></h3><br>
         <h3 id="mt1">Meat Toppings: <span id="mt"></span></h3><br>
