--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <h1>Manasa's Pizza</h1><br>
     <div class="container">  
+      <p>Build Your Own Pizza:
       <div id="crust">
         <p>Select Crust:</p>
         <div class="radio">
@@ -37,31 +38,31 @@
         <div class="radio">
           <label>
             <input type="radio" name="size1" value="small" checked>
-            Small
+            Small($8)
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="size1" value="medium">
-            Medium
+            Medium($10)
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="size1" value="large">
-            Large
+            Large($12)
           </label>
         </div>
       </div>
       <div id = "toppings">
         <div class="form-group">
-          <p>Check any Meat Toppings:</p>
+          <p>Check any Meat Toppings($3):</p>
           <input type="checkbox" name="meat-toppings" value="chicken"> Premium Chicken.<br>
           <input type="checkbox" name="meat-toppings" value="pepperoni"> Pepperoni<br>
           <input type="checkbox" name="meat-toppings" value="italian-sausage"> Italian Sausage<br>
         </div>
         <div class="form-group">
-          <p>Check any Veggie Toppings:</p>
+          <p>Check any Veggie Toppings($2):</p>
           <input type="checkbox" name="toppings" value="hot-sauce"> Hot Sauce<br>
           <input type="checkbox" name="toppings" value="garlic"> Garlic<br>
           <input type="checkbox" name="toppings" value="jalapeno-peppers"> jalapeno-peppers<br>
